--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^2.0.3",
+    "dayjs": "^1.11.10",
     "next": "14.1.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-calendar": "^4.8.0",
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
