--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/themes": "^2.0.3",
     "dayjs": "^1.11.10",
+    "moment": "^2.30.1",
     "next": "14.1.2",
     "react": "^18",
     "react-calendar": "^4.8.0",
